--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,29 @@
-#wrapper {
+#landing-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(auto-fill, 1fr);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 55px auto-fit(1fr, 1fr);
+  grid-template-areas: "navigation navigation navigation navigation" "header header header header" "main main main main";
+}
+
+nav {
+  grid-area: navigation;
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: main;
+}
+
+section {
+  margin-top: -117px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -344,7 +366,7 @@ template {
 }
 
 * {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .title {
@@ -395,6 +417,9 @@ h3 {
   font-size: 0.8em;
   text-transform: uppercase;
 }
+#main-nav a {
+  text-decoration: none;
+}
 
 #service-button {
   text-transform: uppercase;
@@ -403,11 +428,44 @@ h3 {
   letter-spacing: 2px;
 }
 
-#main-nav {
-  height: 55px;
+.service-title {
+  position: absolute;
+  z-index: 1;
+  top: 750px;
+  left: 100px;
+  text-transform: uppercase;
+  font-size: 5em;
+  overflow: hidden;
+}
+
+.service-info {
+  background-color: #e9e9e9;
+}
+.service-info h2 {
+  float: left;
+  padding: 70px 0;
   margin: 0;
-  padding: 0;
-  background-color: transparent;
+  margin-left: 200px;
+  color: #242424;
+}
+.service-info p {
+  float: right;
+  color: #242424;
+  padding: 70px 200px;
+  width: 38%;
+}
+
+a:visited {
+  color: #a7a7a7f1;
+}
+
+#main-nav {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background-color: #181818;
+  height: 55px;
 }
 #main-nav ul {
   text-align: center;
@@ -454,7 +512,7 @@ h3 {
   background-repeat: no-repeat;
   background-position: 100% 65%;
   background-size: cover;
-  height: 95vh;
+  height: 98vh;
   width: 100vw;
 }
 
@@ -475,6 +533,44 @@ h3 {
   float: left;
   height: 15px;
   margin: 20px 40px;
+}
+
+figure {
+  margin: 0;
+  margin-top: -24px;
+  height: 800px;
+  overflow: hidden;
+}
+
+.service-info figure {
+  height: 500px;
+  width: 100vw;
+  margin: 0;
+  overflow: hidden;
+}
+
+#lambo {
+  position: relative;
+  bottom: 100px;
+  width: 100%;
+  margin-bottom: -4px;
+  border: none;
+}
+
+#water {
+  width: 100%;
+}
+
+#interior {
+  width: 100%;
+  position: relative;
+  bottom: 250px;
+}
+
+#engine {
+  width: 100%;
+  position: relative;
+  bottom: 200px;
 }
 
 /*# sourceMappingURL=styles.css.map */
