--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -1,5 +1,5 @@
 * {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .title{
     text-align: center;
@@ -48,6 +48,9 @@ h3{
         font-size: 0.8em;
         text-transform: uppercase;
     }
+    a{
+        text-decoration: none;
+    }
 }
 
 #service-button{
@@ -56,4 +59,36 @@ h3{
     font-family: 'Lato', sans-serif;
     letter-spacing: 2px;
     
+}
+.service-title{
+    // font-family: 'Ubuntu', sans-serif;
+    position: absolute;
+    z-index: 1;
+    top: 750px;
+    left: 100px;
+    text-transform: uppercase;
+    font-size: 5em;
+    overflow: hidden;
+    // color: rgb(156, 156, 156);
+}
+
+.service-info{
+    background-color: #e9e9e9;
+    h2{
+        float: left;
+        padding: 70px 0;
+        margin: 0;
+        margin-left: 200px;
+        color: #242424;
+    }
+    p{
+        float: right;
+        color: #242424;
+        padding: 70px 200px;
+        width: 38%;
+    }
+}
+a:visited{
+    color: #a7a7a7f1;
+
 }
