--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-position: 100% 65%; 
     background-size: cover;
-    height: 95vh;
+    height: 98vh;
     width: 100vw;
 }
 #gradient{
@@ -22,4 +22,42 @@
     float: left;
     height: 15px;
     margin: 20px 40px;
+}
+
+figure{
+    margin: 0;
+    margin-top: -24px;
+    height: 800px;
+    overflow: hidden;
+}
+
+.service-info{
+    figure{
+        height: 500px;
+        width: 100vw;
+        margin: 0;
+        overflow: hidden;
+    }
+}
+
+#lambo{
+    position: relative;
+    bottom: 100px;
+    width: 100%;
+    margin-bottom: -4px;
+    border: none;
+}
+#water{
+    width: 100%;
+    // overflow: hidden;
+}
+#interior{
+    width: 100%;
+    position: relative;
+    bottom: 250px;
+}
+#engine{
+    width: 100%;
+    position: relative;
+    bottom: 200px;
 }
