--- a/scss/partials/component/_navigation.scss
+++ b/scss/partials/component/_navigation.scss
@@ -1,9 +1,10 @@
 #main-nav{
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    background-color: #181818;
     height: 55px;
-    margin: 0;
-    padding: 0;
-    // background-color: #181818;
-    background-color: transparent;
     ul{
         // display: flex;
         // justify-content: space-around;
@@ -19,6 +20,7 @@
         padding: 5px 10px;
         margin: 0 20px;
         transition-duration: 500ms;
+
         &:hover{
   
             background-color: rgb(173, 173, 173);
