--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -19,3 +19,20 @@
         color: #1f1f1f;
     }
 }
+
+#email{
+    display: inline;
+    background-color: red;
+    color: #fff;
+    margin: 80px 50px;
+    padding: 15px 75px;
+    border-radius: 50px;
+    border: none;
+
+}
+#phone{
+    display: inline;
+    border: 2px solid black;
+    padding: 15px 25px;
+    border-radius: 50px;
+}
