--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 55px auto-fit(1fr, 1fr);
-  grid-template-areas: "navigation navigation navigation navigation" "header header header header" "main main main main";
+  grid-template-areas: "navigation navigation navigation navigation" "header header header header" "main main main main" "footer footer footer footer";
 }
 
 nav {
@@ -22,8 +21,13 @@ main {
   grid-area: main;
 }
 
-section {
-  margin-top: -117px;
+footer {
+  grid-area: footer;
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  height: 75px;
+  padding: 25px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -431,15 +435,15 @@ h3 {
 .service-title {
   position: absolute;
   z-index: 1;
-  top: 750px;
-  left: 100px;
+  top: 800px;
+  left: 150px;
   text-transform: uppercase;
-  font-size: 5em;
+  font-size: 4em;
   overflow: hidden;
 }
 
 .service-info {
-  background-color: #e9e9e9;
+  background-color: #f7f7f7;
 }
 .service-info h2 {
   float: left;
@@ -455,8 +459,32 @@ h3 {
   width: 38%;
 }
 
+a:link {
+  color: #a7a7a7f1;
+}
 a:visited {
   color: #a7a7a7f1;
+}
+
+#contact h2, #contact h3 {
+  font-family: "Lato", sans-serif;
+  margin: 20px 100px;
+  color: #000;
+}
+
+#email {
+  font-family: "Lato", sans-serif;
+}
+
+.contact-card {
+  font-family: "Lato", sans-serif;
+}
+
+footer p {
+  color: #e6e6e6;
+  padding: 10px;
+  text-align: center;
+  margin: 0;
 }
 
 #main-nav {
@@ -465,11 +493,14 @@ a:visited {
   z-index: 1000;
   width: 100%;
   background-color: #181818;
-  height: 55px;
+  height: 52px;
 }
 #main-nav ul {
   text-align: center;
   padding-right: 50px;
+}
+#main-nav ul a {
+  padding: 25px;
 }
 #main-nav li {
   display: inline-block;
@@ -507,12 +538,30 @@ a:visited {
   color: #1f1f1f;
 }
 
+#email {
+  display: inline;
+  background-color: red;
+  color: #fff;
+  margin: 80px 50px;
+  padding: 15px 75px;
+  border-radius: 50px;
+  border: none;
+}
+
+#phone {
+  display: inline;
+  border: 2px solid black;
+  padding: 15px 25px;
+  border-radius: 50px;
+}
+
 #main-image {
+  margin-top: 52px;
   background-image: url("../images/main-car.jpg");
   background-repeat: no-repeat;
   background-position: 100% 65%;
   background-size: cover;
-  height: 98vh;
+  height: 100vh;
   width: 100vw;
 }
 
@@ -538,7 +587,7 @@ a:visited {
 figure {
   margin: 0;
   margin-top: -24px;
-  height: 800px;
+  height: 600px;
   overflow: hidden;
 }
 
@@ -551,7 +600,7 @@ figure {
 
 #lambo {
   position: relative;
-  bottom: 100px;
+  bottom: 200px;
   width: 100%;
   margin-bottom: -4px;
   border: none;
@@ -571,6 +620,48 @@ figure {
   width: 100%;
   position: relative;
   bottom: 200px;
+}
+
+i {
+  color: #fff;
+  font-size: 2em;
+  align-self: center;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(8px);
+  }
+  60% {
+    transform: translateY(3px);
+  }
+}
+#arrow-link {
+  grid-column: 3;
+  padding: 5px;
+}
+#arrow-link #arrow {
+  color: red;
+  height: 75px;
+  margin-top: 150px;
+  margin-right: 400px;
+  animation: bounce 2s infinite ease-in;
+}
+
+#contact {
+  margin-top: 100px;
+  display: inline-block;
+  text-align: center;
+  height: 70vh;
+}
+#contact h2 {
+  text-align: left;
+}
+#contact h3 {
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
