--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -1,9 +1,10 @@
 #main-image{
+    margin-top: 52px;
     background-image: url("../images/main-car.jpg");
     background-repeat: no-repeat;
     background-position: 100% 65%; 
     background-size: cover;
-    height: 98vh;
+    height: 100vh;
     width: 100vw;
 }
 #gradient{
@@ -27,7 +28,7 @@
 figure{
     margin: 0;
     margin-top: -24px;
-    height: 800px;
+    height: 600px;
     overflow: hidden;
 }
 
@@ -42,7 +43,7 @@ figure{
 
 #lambo{
     position: relative;
-    bottom: 100px;
+    bottom: 200px;
     width: 100%;
     margin-bottom: -4px;
     border: none;
@@ -61,3 +62,36 @@ figure{
     position: relative;
     bottom: 200px;
 }
+
+i{
+    color: #fff;
+    font-size: 2em;
+    align-self: center;
+}
+
+
+// arrow animation
+@keyframes bounce{
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    30%{
+        transform: translateY(8px);
+    }
+    60%{
+        transform: translateY(3px);
+    }
+}
+#arrow-link{
+    grid-column: 3;
+    padding: 5px;
+    #arrow{
+        color: red;
+        height: 75px;
+  
+        margin-top: 150px;
+        margin-right: 400px;
+        animation: bounce 2s infinite ease-in;
+    }
+}
+
