--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 }
 
 .grid-container {
+  overflow: hidden;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-areas: "navigation navigation navigation navigation" "header header header header" "main main main main" "footer footer footer footer";
@@ -369,10 +370,6 @@ template {
   display: none;
 }
 
-* {
-  overflow-x: hidden;
-}
-
 .title {
   text-align: center;
 }
@@ -443,19 +440,19 @@ h3 {
 }
 
 .service-info {
-  background-color: #f7f7f7;
+  padding: 50px 100px 70px 100px;
+  width: 100%;
+  background-color: #0f0f0f;
 }
 .service-info h2 {
-  float: left;
-  padding: 70px 0;
-  margin: 0;
-  margin-left: 200px;
-  color: #242424;
+  display: inline-block;
+  margin: 20px 50px;
+  color: #f1f1f1;
 }
 .service-info p {
-  float: right;
-  color: #242424;
-  padding: 70px 200px;
+  display: inline-block;
+  margin: 20px 50px;
+  color: #f1f1f1;
   width: 38%;
 }
 
@@ -468,7 +465,7 @@ a:visited {
 
 #contact h2, #contact h3 {
   font-family: "Lato", sans-serif;
-  margin: 20px 100px;
+  margin: 20px auto;
   color: #000;
 }
 
@@ -543,7 +540,7 @@ footer p {
   background-color: red;
   color: #fff;
   margin: 80px 50px;
-  padding: 15px 75px;
+  padding: 15px 125px;
   border-radius: 50px;
   border: none;
 }
@@ -551,7 +548,17 @@ footer p {
 #phone {
   display: inline;
   border: 2px solid black;
-  padding: 15px 25px;
+  padding: 15px 70px;
+  border-radius: 50px;
+}
+
+.schedule-button {
+  display: inline-block;
+  background-color: transparent;
+  color: #f1f1f1;
+  padding: 10px 25px;
+  margin: 0 50px;
+  border: 2px solid #f1f1f1;
   border-radius: 50px;
 }
 
@@ -587,22 +594,21 @@ footer p {
 figure {
   margin: 0;
   margin-top: -24px;
-  height: 600px;
+  height: 450px;
   overflow: hidden;
 }
 
 .service-info figure {
-  height: 500px;
+  height: 200px;
   width: 100vw;
   margin: 0;
   overflow: hidden;
 }
 
-#lambo {
+#white-car {
   position: relative;
-  bottom: 200px;
+  bottom: 300px;
   width: 100%;
-  margin-bottom: -4px;
   border: none;
 }
 
@@ -612,6 +618,7 @@ figure {
 
 #interior {
   width: 100%;
+  top: -200px;
   position: relative;
   bottom: 250px;
 }
@@ -652,13 +659,12 @@ i {
 }
 
 #contact {
-  margin-top: 100px;
-  display: inline-block;
   text-align: center;
+  margin-top: 100px;
   height: 70vh;
 }
 #contact h2 {
-  text-align: left;
+  color: #000;
 }
 #contact h3 {
   text-align: center;
