--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -1,6 +1,6 @@
-* {
-    overflow-x: hidden;
-}
+// * {
+//     overflow-x: hidden;
+// }
 .title{
     text-align: center;
 }
@@ -72,19 +72,30 @@ h3{
     // color: rgb(156, 156, 156);
 }
 
+// strip container for service section
 .service-info{
-    background-color: #f7f7f7;
+    padding: 50px 100px 70px 100px;
+    width: 100%;
+    // background-color: #f7f7f7;
+    // background-color: #111111;
+    background-color: #0f0f0f;
     h2{
-        float: left;
-        padding: 70px 0;
-        margin: 0;
-        margin-left: 200px;
-        color: #242424;
+        display: inline-block;
+        margin: 20px 50px;
+        // float: left;
+        // padding: 70px 0;
+        // margin: 0;
+        // margin-left: 200px;
+        // color: #242424;
+        color: #f1f1f1;
     }
     p{
-        float: right;
-        color: #242424;
-        padding: 70px 200px;
+        display: inline-block;
+        margin: 20px 50px;
+        // float: right;
+        // padding: 70px 200px;
+        // color: #242424;
+        color: #f1f1f1;
         width: 38%;
     }
 }
@@ -95,12 +106,13 @@ a{
     &:visited{
         color: #a7a7a7f1;
     }
-
 }
+// h2, p, and button in the service section
+
 #contact{
     h2, h3{
         font-family: 'Lato', sans-serif;
-        margin: 20px 100px;
+        margin: 20px auto;
         color: #000;
     }
 }
