--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
 }
-
+// button on landing page
 #service-button{
     padding: 20px 80px;
     border: 3px solid #f1f1f1f1;
@@ -25,7 +25,7 @@
     background-color: red;
     color: #fff;
     margin: 80px 50px;
-    padding: 15px 75px;
+    padding: 15px 125px;
     border-radius: 50px;
     border: none;
 
@@ -33,6 +33,18 @@
 #phone{
     display: inline;
     border: 2px solid black;
-    padding: 15px 25px;
+    padding: 15px 70px;
+    border-radius: 50px;
+}
+
+// Make appointment button in service section
+.schedule-button{
+    display: inline-block;
+    background-color: transparent;
+    color: #f1f1f1;
+    padding: 10px 25px;
+    margin: 0 50px;
+    // border: 2px solid rgb(112, 112, 112);
+    border: 2px solid #f1f1f1;
     border-radius: 50px;
 }
