--- a/scss/partials/component/_cards.scss
+++ b/scss/partials/component/_cards.scss
@@ -1,10 +1,9 @@
 #contact{
-    margin-top: 100px;
-    display: inline-block;
     text-align: center;
+    margin-top: 100px;
     height: 70vh;
     h2{
-        text-align: left;
+        color: #000;
     }
     h3{
         text-align: center;
