--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -28,24 +28,24 @@
 figure{
     margin: 0;
     margin-top: -24px;
-    height: 600px;
+    height: 450px;
     overflow: hidden;
 }
 
 .service-info{
     figure{
-        height: 500px;
+        height: 200px;
         width: 100vw;
         margin: 0;
         overflow: hidden;
     }
 }
 
-#lambo{
+#white-car{
     position: relative;
-    bottom: 200px;
+    bottom: 300px;
     width: 100%;
-    margin-bottom: -4px;
+    // margin-bottom: -4px;
     border: none;
 }
 #water{
@@ -54,6 +54,7 @@ figure{
 }
 #interior{
     width: 100%;
+    top: -200px;
     position: relative;
     bottom: 250px;
 }
