--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -3,6 +3,7 @@
 // }
 .title{
     text-align: center;
+    opacity: 0;
 }
 h1{
     font-family: ltc-bodoni-175, serif;
@@ -22,7 +23,7 @@ h2{
     font-style: normal;
     grid-column: 3/5;
     grid-row: 2;
-    font-size: 3.2em;
+    font-size: 3.0em;
     color: #f1f1f1f1;
     margin-top: 15px;
     margin-left: auto;
@@ -97,6 +98,8 @@ h3{
         // color: #242424;
         color: #f1f1f1;
         width: 38%;
+        font-family: 'Lato', sans-serif;
+        line-height: 1.40;
     }
 }
 a{
@@ -108,6 +111,9 @@ a{
     }
 }
 // h2, p, and button in the service section
+.schedule-button{
+    font-family: 'Lato', sans-serif;
+}
 
 #contact{
     h2, h3{
