--- a/scss/partials/component/_navigation.scss
+++ b/scss/partials/component/_navigation.scss
@@ -23,12 +23,12 @@
         padding: 5px 10px;
         margin: 0 20px;
         transition-duration: 500ms;
-
+        cursor: pointer;
         &:hover{
   
-            background-color: rgb(173, 173, 173);
-            color: rgb(59, 59, 59);
-            border-radius: 3px;
+            // background-color: rgb(173, 173, 173);
+            // color: rgb(59, 59, 59);
+            // border-radius: 3px;
             cursor: pointer;
         }
     }
