--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -11,11 +11,16 @@ h1{
     font-style: normal;
     grid-column: 3/5;
     grid-row: 1;
-    font-size: 8em;
+    font-size: 4em;
     color: #f1f1f1f1;
-    margin: 60px 0 0;
+    margin: 50px 0 0 0;
+    padding-top: 45px;
     margin-left: auto;
     margin-right: auto;
+    @include mq($lg){
+        margin: 60px 0 0;
+        font-size: 8em;
+    }
 }
 h2{
     font-family: ltc-bodoni-175, serif;
@@ -23,11 +28,14 @@ h2{
     font-style: normal;
     grid-column: 3/5;
     grid-row: 2;
-    font-size: 3.0em;
+    font-size: 2.0em;
     color: #f1f1f1f1;
     margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
+    @include mq($lg){
+        font-size: 3.0em;
+    }
 }
 h3{
     font-family: ltc-bodoni-175, serif;
@@ -37,9 +45,12 @@ h3{
     grid-row: 2;
     font-size: 1.1em;
     color: #f1f1f1f1;
-    margin: 80px 45px 0 50px;
+
     margin-left: auto;
     margin-right: auto;
+    @include mq($lg){
+        margin: 80px 45px 0 50px;
+    }
 }
 
 // nav bar font
@@ -75,14 +86,24 @@ h3{
 
 // strip container for service section
 .service-info{
-    padding: 50px 100px 70px 100px;
+    padding: 50px 0px 70px 0px;
+
+    @include mq($md){
+        padding: 50px 100px 70px 100px;
+    }
+
     width: 100%;
     // background-color: #f7f7f7;
     // background-color: #111111;
     background-color: #0f0f0f;
     h2{
-        display: inline-block;
-        margin: 20px 50px;
+        text-align: left;
+        margin: 0px 50px;
+        @include mq($md){
+            display: inline-block;
+            margin: 20px 50px;
+        }
+
         // float: left;
         // padding: 70px 0;
         // margin: 0;
@@ -91,15 +112,20 @@ h3{
         color: #f1f1f1;
     }
     p{
-        display: inline-block;
-        margin: 20px 50px;
+ 
+        text-align: left;
+        margin: 40px 50px;
         // float: right;
         // padding: 70px 200px;
         // color: #242424;
         color: #f1f1f1;
-        width: 38%;
         font-family: 'Lato', sans-serif;
         line-height: 1.40;
+        @include mq($md){
+            text-align: center;
+            width: 38%;
+            display: inline-block;
+        }
     }
 }
 a{
