--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -1,61 +1,94 @@
-.button{
-    grid-column: 3/5;
-    grid-row: 2;
-    // margin-top: 90px;
-    margin-top: 180px;
-    margin-left: auto;
-    margin-right: auto;
+a{
+    text-decoration: none;
 }
+button{
+    outline: none;
+}
+.button{
+    text-align: center;
+    margin: 380px auto 0 auto;
+    @include mq($lg){
+        grid-column: 3/5;
+        grid-row: 2;
+        // margin-top: 90px;
+        margin-top: 180px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
 // button on landing page
 #service-button{
-    opacity: 0;
-    padding: 20px 80px;
-    border: 3px solid #f1f1f1f1;
+    padding: 10px 150px;
+    border: 2px solid #f1f1f1f1;
     border-radius: 50px;
     background-color: transparent;
     color: #f1f1f1f1;
     transition-duration: 600ms;
+    opacity: 0;
+
     &:hover{
         background-color: rgb(255, 255, 255);
         color: #1f1f1f;
         cursor: pointer;
+    }
+    @include mq($md){
+        padding: 20px 80px;
+        border: 3px solid #f1f1f1f1;
     }
 }
 
 #email{
     display: inline;
-    background-color: red;
+    background-color: rgb(0, 132, 255);
     color: #fff;
-    margin: 80px 50px;
-    padding: 15px 125px;
+    margin: 60px 50px 40px 50px;
+    padding: 15px 165px;
     border-radius: 50px;
     border: none;
     &:hover{
         cursor: pointer;
     }
-
+    @include mq($md){
+        padding: 15px 125px;
+        margin: 80px 50px;
+    }
 }
 #phone{
     display: inline;
     border: 2px solid black;
-    padding: 15px 70px;
+    padding: 14px 130px;
     border-radius: 50px;
+    color: #1f1f1f;
+    @include mq($md){
+        padding: 14px 90px;
+    }
+}
+.phone-link{
+    text-decoration: none;
 }
 
 // Make appointment button in service section
 .schedule-button{
-    display: inline-block;
+    padding: 10px 135px;
+    margin: 0 auto;
+    display: block;
     background-color: transparent;
     color: #f1f1f1;
-    padding: 10px 25px;
-    margin: 0 50px;
     // border: 2px solid rgb(112, 112, 112);
-    border: 2px solid #f1f1f1;
+    border: 1px solid #f1f1f1;
     border-radius: 50px;
     transition-duration: 600ms;
     &:hover{
         background-color: rgb(255, 255, 255);
         color: #1f1f1f;
         cursor: pointer;
+    }
+    @include mq($md){
+        background-color: transparent;
+        display: inline-block;
+        margin: 0 50px;
+        padding: 10px 25px;
     }
 }
