--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -6,7 +6,8 @@ button{
 }
 .button{
     text-align: center;
-    margin: 380px auto 0 auto;
+    margin: 240px auto 0 auto;
+    // margin: 380px auto 0 auto;
     @include mq($lg){
         grid-column: 3/5;
         grid-row: 2;
@@ -20,7 +21,8 @@ button{
 
 // button on landing page
 #service-button{
-    padding: 10px 150px;
+    padding: 8px 80px;
+    // padding: 10px 150px;
     border: 2px solid #f1f1f1f1;
     border-radius: 50px;
     background-color: transparent;
