--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -1,7 +1,8 @@
 // media query screen sizes
-$xs: 321px;
-$xi: 360px;
-$sm: 414px;
-$md: 768px;
-$lg: 1024px;
+$xs: 321px; // iphone 5 to X
+$xi: 360px; // iphone xs
+$sm: 414px; // iPhone Plus/Max sizes
+$md: 768px; // iPad
+$lg: 1024px; // iPad Pro
+// $xl: 1285px; // Desktop
 $xl: 1441px;
