--- a/scss/partials/base/_grid.scss
+++ b/scss/partials/base/_grid.scss
@@ -57,7 +57,10 @@ footer{
     display: flex;
     flex-direction: column;
     background-color: rgb(53, 53, 53);
-    height: 75px;
+    height: 55px;
     padding: 25px;
+    @include mq($md){
+        height: 75px;
+    }
 }
 
