--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -6,7 +6,7 @@ button{
 }
 .button{
     text-align: center;
-    margin: 240px auto 0 auto;
+    margin: 270px auto 0 auto;
     // margin: 380px auto 0 auto;
     @include mq($lg){
         grid-column: 3/5;
@@ -45,8 +45,10 @@ button{
     display: inline;
     background-color: rgb(0, 132, 255);
     color: #fff;
-    margin: 60px 50px 40px 50px;
-    padding: 15px 165px;
+    // margin: 60px 50px 40px 50px;
+    padding: 10px 105px;
+    margin: 25px 0;
+    // padding: 15px 165px;
     border-radius: 50px;
     border: none;
     &:hover{
@@ -60,7 +62,8 @@ button{
 #phone{
     display: inline;
     border: 2px solid black;
-    padding: 14px 130px;
+    padding: 8px 70px;
+    // padding: 14px 130px;
     border-radius: 50px;
     color: #1f1f1f;
     @include mq($md){
@@ -73,8 +76,9 @@ button{
 
 // Make appointment button in service section
 .schedule-button{
-    padding: 10px 135px;
-    margin: 0 auto;
+    padding: 8px 80px;
+    // padding: 10px 135px;
+    margin: 0 25px;
     display: block;
     background-color: transparent;
     color: #f1f1f1;
@@ -82,6 +86,7 @@ button{
     border: 1px solid #f1f1f1;
     border-radius: 50px;
     transition-duration: 600ms;
+    font-size: 0.8em;
     &:hover{
         background-color: rgb(255, 255, 255);
         color: #1f1f1f;
@@ -92,5 +97,6 @@ button{
         display: inline-block;
         margin: 0 50px;
         padding: 10px 25px;
+        font-size: 1em;
     }
 }
