--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -37,19 +37,12 @@
 figure{
     margin: 0;
     overflow: hidden;
-    height: 20.5em;
+    height: 200px;
+    width: 100vw;
+    // height: 20.5em;
     @include mq($md){
         margin-top: -24px;
         height: 450px;
-    }
-}
-
-.service-info{
-    figure{
-        height: 200px;
-        width: 100vw;
-        margin: 0;
-        overflow: hidden;
     }
 }
 
