--- a/css/styles.css
+++ b/css/styles.css
@@ -791,7 +791,8 @@ button {
 }
 @media (min-width: 414px) {
   #main-image {
-    height: 100vh;
+    background-position: 50% -90%;
+    height: 90vh;
   }
 }
 @media (min-width: 1024px) {
