--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -8,7 +8,8 @@
         height: 90vh;
     }
     @include mq($sm){
-        height: 100vh;
+        background-position: 50% -90%;
+        height: 90vh;
     }
     @include mq($lg){
         background-image: url("../images/main-car.jpg");
