--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -14,6 +14,9 @@ button{
     @include mq($sm){
         margin-top: 420px;
     }
+    @include mq($tw){
+        margin-top: 360px;
+    }
     @include mq($lg){
         grid-column: 3/5;
         grid-row: 2;
@@ -106,6 +109,9 @@ button{
         padding: 12px 140px;
         margin: 45px 0;
     }
+    @include mq($tw){
+        padding: 10px 130px;
+    }
     @include mq($md){
         padding: 15px 125px;
         margin: 80px 50px;
@@ -120,6 +126,10 @@ button{
     color: #1f1f1f;
     @include mq($sm){
         padding: 10px 105px;
+    }
+        
+    @include mq($tw){
+        padding: 8px 95px;
     }
     @include mq($md){
         padding: 14px 90px;
