--- a/css/styles.css
+++ b/css/styles.css
@@ -689,6 +689,11 @@ button {
     border: 2px solid #f1f1f1f1;
   }
 }
+@media (min-width: 390px) {
+  #service-button {
+    border: 2px solid #f1f1f1f1;
+  }
+}
 @media (min-width: 414px) {
   #service-button {
     padding: 8px 110px;
