main buttin 420px margin top on 414px screen. File name change from grid to layout

--- a/scss/partials/utilities/_mixins.scss
+++ b/scss/partials/utilities/_mixins.scss
@@ -1,5 +1,11 @@
 @mixin mq($size){
-    @media(min-width: $size){
+    @media only screen and (min-width: $size){
+        @content;
+    }
+}
+
+@mixin mqLand($size){
+    @media only screen and (min-width: $size) and (orientation: landscape){
         @content;
     }
 }
