--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -7,3 +7,11 @@ $md: 768px; // iPad
 $lg: 1024px; // iPad Pro
 // $xl: 1285px; // Desktop
 $xl: 1441px;
+
+// media query landscape sizes
+$lxs: 568px; // iphone 5 to X
+$lxi: 812px; // iphone xs
+$ltw: 844px; // iphone 12 pro
+$lsm: 896px; // iPhone Plus/Max sizes
+$lmd: 1024px; // iPad 9.7
+$llg: 1366px; // iPad Pro 12.9
