--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #landing-wrapper {
   grid-template-columns: 1fr;
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   #landing-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -14,7 +14,7 @@
   grid-template-columns: 1fr;
   grid-template-areas: "navigation" "header" "main" "footer";
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-areas: "navigation navigation navigation navigation" "header header header header" "main main main main" "footer footer footer footer";
@@ -45,7 +45,7 @@ footer {
   height: 55px;
   padding: 25px;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   footer {
     height: 75px;
   }
@@ -408,7 +408,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   h1 {
     margin: 60px 0 0;
     font-size: 8em;
@@ -428,7 +428,7 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   h2 {
     font-size: 3em;
   }
@@ -446,7 +446,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   h3 {
     margin: 80px 45px 0 50px;
   }
@@ -483,7 +483,7 @@ h3 {
   width: 100%;
   background-color: #0f0f0f;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .service-info {
     padding: 50px 100px 70px 100px;
   }
@@ -493,7 +493,7 @@ h3 {
   margin: 0px 50px;
   color: #f1f1f1;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .service-info h2 {
     display: inline-block;
     margin: 20px 50px;
@@ -508,7 +508,7 @@ h3 {
   font-family: "Lato", sans-serif;
   line-height: 1.4;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .service-info p {
     font-size: 1em;
     text-align: center;
@@ -528,7 +528,7 @@ a:visited {
   font-family: "Lato", sans-serif;
 }
 
-@media (min-width: 390px) {
+@media only screen and (min-width: 390px) {
   #contact {
     margin-top: 700px;
   }
@@ -542,7 +542,7 @@ a:visited {
   padding: 25px 15px;
   font-size: 1.5em;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #contact h2 {
     font-size: 2em;
   }
@@ -563,7 +563,7 @@ footer p {
   margin: 0;
   font-size: 0.8em;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   footer p {
     font-size: 1em;
   }
@@ -581,7 +581,7 @@ footer p {
   text-align: center;
   display: none;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #main-nav ul {
     display: block;
   }
@@ -595,7 +595,7 @@ footer p {
 #main-nav li:hover {
   cursor: pointer;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #main-nav ul {
     padding-right: 50px;
   }
@@ -615,7 +615,7 @@ footer p {
   height: 45px;
   width: 45px;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #hamburger {
     display: none;
   }
@@ -644,22 +644,22 @@ button {
   text-align: center;
   margin: 270px auto 0 auto;
 }
-@media (min-width: 360px) {
+@media only screen and (min-width: 360px) {
   .button {
     margin-top: 465px;
   }
 }
-@media (min-width: 390px) {
+@media only screen and (min-width: 390px) {
   .button {
     margin-top: 360px;
   }
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   .button {
-    margin-top: 430px;
+    margin-top: 420px;
   }
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .button {
     grid-column: 3/5;
     grid-row: 2;
@@ -683,23 +683,23 @@ button {
   color: #1f1f1f;
   cursor: pointer;
 }
-@media (min-width: 360px) {
+@media only screen and (min-width: 360px) {
   #service-button {
     padding: 8px 100px;
     border: 2px solid #f1f1f1f1;
   }
 }
-@media (min-width: 390px) {
+@media only screen and (min-width: 390px) {
   #service-button {
     border: 2px solid #f1f1f1f1;
   }
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   #service-button {
     padding: 8px 110px;
   }
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #service-button {
     padding: 20px 80px;
     border: 3px solid #f1f1f1f1;
@@ -722,19 +722,19 @@ button {
   color: #1f1f1f;
   cursor: pointer;
 }
-@media (min-width: 360px) {
+@media only screen and (min-width: 360px) {
   .schedule-button {
     padding: 10px 100px;
     margin: 0 auto;
   }
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   .schedule-button {
     padding: 10px 105px;
     margin: 0 auto;
   }
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .schedule-button {
     background-color: transparent;
     display: inline-block;
@@ -756,18 +756,18 @@ button {
 #email:hover {
   cursor: pointer;
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   #email {
     padding: 12px 140px;
     margin: 45px 0;
   }
 }
-@media (min-width: 390px) {
+@media only screen and (min-width: 390px) {
   #email {
     padding: 10px 130px;
   }
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #email {
     padding: 15px 125px;
     margin: 80px 50px;
@@ -781,17 +781,17 @@ button {
   border-radius: 50px;
   color: #1f1f1f;
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   #phone {
     padding: 10px 105px;
   }
 }
-@media (min-width: 390px) {
+@media only screen and (min-width: 390px) {
   #phone {
     padding: 8px 95px;
   }
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #phone {
     padding: 14px 90px;
   }
@@ -808,18 +808,18 @@ button {
   width: 100vw;
   height: 100vh;
 }
-@media (min-width: 360px) {
+@media only screen and (min-width: 360px) {
   #main-image {
     height: 90vh;
   }
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   #main-image {
     background-position: 50% -90%;
     height: 90vh;
   }
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   #main-image {
     background-image: url("../images/main-car.jpg");
     margin-top: 52px;
@@ -830,7 +830,7 @@ button {
 #gradient {
   background-image: linear-gradient(to bottom, black, rgba(0, 0, 0, 0) 50%);
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   #gradient {
     background-image: linear-gradient(to left, black, rgba(0, 0, 0, 0) 50%);
   }
@@ -850,7 +850,7 @@ button {
   height: 8px;
   float: left;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .logo-mini {
     height: 15px;
   }
@@ -862,12 +862,12 @@ figure {
   height: 200px;
   width: 100vw;
 }
-@media (min-width: 414px) {
+@media only screen and (min-width: 414px) {
   figure {
     height: 270px;
   }
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   figure {
     margin-top: -24px;
     height: 450px;
@@ -879,7 +879,7 @@ figure {
   width: 100%;
   border: none;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #white-car {
     bottom: 300px;
   }
@@ -896,7 +896,7 @@ figure {
   position: relative;
   bottom: 250px;
 }
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   #interior {
     top: -200px;
   }
@@ -906,7 +906,7 @@ figure {
   width: 100%;
   position: relative;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #engine {
     bottom: 200px;
   }
@@ -938,7 +938,7 @@ i {
   display: none;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   #arrow-link {
     padding: 5px;
   }
