--- a/scss/partials/component/_navigation.scss
+++ b/scss/partials/component/_navigation.scss
@@ -47,10 +47,8 @@
 
 #hamburger{
     float: right;
-    // margin: 5px 15px;
-    padding: 10px;
-    height: 45px;
-    width: 45px;
+    padding: 5px;
+    margin: 10px;
     @include mq($md){
       display: none;
     }
@@ -64,4 +62,17 @@
     width: 24px;
     background-color: rgb(230, 230, 230);
     z-index: 1000;
+  }
+
+  // nav link styles after .active class is added when clicking hamburger
+  .active{
+    display: "block";
+    background-color: #181818;
+      li{
+          text-align: center;
+          padding: 15px 20px;
+          &:nth-of-type(n+2){
+              margin-right: 30px;
+          }
+      }
   }
